Fixed navigation bar text alignment

--- a/activitirl-web/src/index.css
+++ b/activitirl-web/src/index.css
@@ -14,24 +14,20 @@ code {
 
 
 .navigation-bar{
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
   background-color: aqua;
-  width: 100%;
-  padding-top: 14px;
-  padding-bottom: 14px;
+  padding: 20px;
 }
 
-.nav-left{
+.navigation-bar > h1{
   display: inline-block;
-  padding-left: 10px;
-}
-.nav-right{
-  display: inline-block;
-  padding: 10px;
 }
 
-.nav-right a{
-  padding: 10px;
-  text-align: right;
+.nav > li {
+  display: inline-block;
+  padding-left: 20px;
 }
 
 .info-element{
